.k8s/ordersystem-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    microservice.group: final-project
    io.kompose.service: ordersystem-service
  name: ordersystem-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ordersystem-service
  template:
    metadata:
      labels:
        microservice.group: final-project
        io.kompose.service: ordersystem-service
    spec:
      containers:
        - env:
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: final-project-database-secret
                  key: username
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: final-project-database-secret
                  key: password
            - name: DB_NAME
              valueFrom:
                secretKeyRef:
                  name: final-project-database-secret
                  key: database
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: final-project-database-private-ip-secret
                  key: db_host
            - name: SPRING_PROFILES_ACTIVE
              value: gcp
          image: europe-west3-docker.pkg.dev/final-project-334521/fp-repo/ordersystem:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
          livenessProbe:
            httpGet:
              port: 8762
              path: /actuator/health/liveness
            failureThreshold: 5
            initialDelaySeconds: 50
            periodSeconds: 5
            timeoutSeconds: 20
          readinessProbe:
            httpGet:
              port: 8762
              path: /actuator/health/readiness
            failureThreshold: 5
            initialDelaySeconds: 85
            periodSeconds: 5
            timeoutSeconds: 10
          name: ordersystem-service
          ports:
            - containerPort: 8762
      hostname: ordersystem-service
      restartPolicy: Always
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 100%
