.k8s/raporting-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    microservice.group: final-project
    io.kompose.service: raporting-service
  name: raporting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: raporting-service
  template:
    metadata:
      labels:
#        io.kompose.network/services-network-01: "true"
        microservice.group: final-project
        io.kompose.service: raporting-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: fpuser
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://10.5.160.3:5432/final-project-db
            - name: SPRING_DATASOURCE_USERNAME
              value: fpuser
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: none
          image: europe-west3-docker.pkg.dev/final-project-334521/fp-repo/raporting:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 8764
              path: /actuator/health
            failureThreshold: 5
            initialDelaySeconds: 45
            periodSeconds: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              port: 8764
              path: /actuator/health
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 10
          name: raporting-service
          ports:
            - containerPort: 8764
          resources: {}
      hostname: raporting-service
      restartPolicy: Always
