.k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    microservice.group: final-project
    io.kompose.service: gateway
  name: gateway
spec:
  type: LoadBalancer
  ports:
    - name: "8760"
      port: 8760
      targetPort: 8760
  selector:
    io.kompose.service: gateway
