.k8s/ordersystem-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    microservice.group: final-project
    io.kompose.service: ordersystem-service
  name: ordersystem-service
spec:
  ports:
    - name: "8762"
      port: 8762
      targetPort: 8762
  selector:
    io.kompose.service: ordersystem-service
