.k8s/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    microservice.group: final-project
    io.kompose.service: registry
  name: registry
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: registry
